--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos maxime exercitationem, rem, rerum hic voluptas repellendus fuga soluta temporibus voluptatum quaerat sapiente. Ducimus blanditiis alias accusantium id vitae non laboriosam?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolor quo, ducimus quos laboriosam nulla esse. Esse quisquam iure cupiditate natus illo nulla harum numquam in iste laboriosam! Nobis, doloremque.</p>
         </article>
     </main>
 </body>
