--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos maxime exercitationem, rem, rerum hic voluptas repellendus fuga soluta temporibus voluptatum quaerat sapiente. Ducimus blanditiis alias accusantium id vitae non laboriosam?</p>
+            <p><a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs"></a>Acesse o curos de HTML5</p>
         </article>
         <article>
             <h2>Curso JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JS">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolor quo, ducimus quos laboriosam nulla esse. Esse quisquam iure cupiditate natus illo nulla harum numquam in iste laboriosam! Nobis, doloremque.</p>
+            <p><a href=""></a>Acesse o curso de JavaScript</p>
         </article>
     </main>
 </body>
